# MyOpenGLES1

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/wzeqiu/myopengles1/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: vertex_shader.glsl
app/src/main/assets/coordinate/: texture_vertex.glsl
app/src/main/assets/position_change/: texture_fragment.glsl  texture_vertex.glsl  vertex_shader.glsl
app/src/main/assets/shadder/: frgment_shadder.glsl  uniform_frgment_shadder.glsl  uniform_vertex_shader.glsl
app/src/main/assets/textures/: texture_fragment.glsl  texture_vertex.glsl
app/src/main/assets/triangle/: blue_fragment_shader.glsl  vertex_shader.glsl  yellow_fragment_shader.glsl
app/src/main/cpp/: opengles.cpp
app/src/main/cpp/coordinate/: Coordinate.cpp
app/src/main/cpp/position_chanage/: PositionChanage.cpp
app/src/main/cpp/shaders/: shaders.cpp
app/src/main/cpp/textures/: texture.cpp
app/src/main/cpp/triangle/: triangle.cpp
app/src/main/cpp/utils/: gl_utils.cpp  gl_utils.h  stb_image.h
app/src/main/cpp/utils/GLFW/: glfw3.h  glfw3native.h
app/src/main/java/com/example/wzeqiu/myopengles1/: MainActivity.java
app/src/main/java/com/example/wzeqiu/myopengles1/activitys/: CoordinateActivity.java  PositionChanageActivity.java  ShadderActivity.java  TexturesActivity.java  TriangleActivity.java
app/src/main/java/com/example/wzeqiu/myopengles1/es/: ESGLSurfaceView.java  ESRenderer.java
app/src/main/java/com/example/wzeqiu/myopengles1/es/coordinate/: ESGLSurfaceView.java  ESRenderer.java
app/src/main/java/com/example/wzeqiu/myopengles1/es/position_change/: ESGLSurfaceView.java  ESRenderer.java
app/src/main/java/com/example/wzeqiu/myopengles1/es/shadder/: ESGLSurfaceView.java  ESRenderer.java
app/src/main/java/com/example/wzeqiu/myopengles1/es/textures/: ESGLSurfaceView.java  ESRenderer.java
app/src/main/java/com/example/wzeqiu/myopengles1/es/triangle/: ESGLSurfaceView.java  ESRenderer.java
app/src/main/java/com/example/wzeqiu/myopengles1/es_native/: Native.java  UtilsNative.java
app/src/main/java/com/example/wzeqiu/myopengles1/es_native/coordinate/: Native.java
app/src/main/java/com/example/wzeqiu/myopengles1/es_native/position_change/: Native.java
app/src/main/res/layout/: activity_coordinate.xml  activity_main.xml  activity_position_chanage.xml  activity_shadder.xml  activity_textures.xml  activity_triangle.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/wzeqiu/myopengles1/: ExampleUnitTest.java
(+5 files in other folders)
